added google drive url

--- a/S1_DataScrapping.ipynb
+++ b/S1_DataScrapping.ipynb
@@ -21,7 +21,9 @@
     "- The data loaded in json and csv formats\n",
     "- Due to the fact, that data loading takes several hours, some parts of the code for that were shown in illustrative purposes and commented for safety reason \n",
     "- loaded data have about 0.3 Gb and contains ~10k files\n",
-    "- due to GitHub limitations, I've put loaded files on my Google Drive with this [link](**ADD LATER**)\n",
+    "- due to GitHub limitations, I've put loaded files on my Google Drive with this [link](https://drive.google.com/open?id=11Zw-DvNbpc_lc3kj4AFzwESaKZ6Rs-0M)\n",
+    "  - raw loaded data is located in `data.rar`\n",
+    "  - if the project forked, this file need to be unzipped to project folder\n",
     "\n",
     "\n",
     "**Data Loading Process**\n",
